<resources>
    <string name="app_name">基础框架</string>
    <!--activity_login-->
    <string name="login_username">用户名</string>
    <string name="login_input_username">请输入您的账号</string>
    <string name="login_input_pass">请输入不少于六位的密码</string>
    <string name="login_password">密码</string>
    <string name="login_forget_pass">忘记密码?</string>
    <string name="login">登录</string>
    <!--activity_sign_in-->
    <string name="signin_register">注册新用户</string>
    <string name="signin_code">发送验证码</string>
    <string name="signin_input_code">请填写接收到的验证码</string>
    <string name="signin_input_pass">请填写您的密码</string>
    <string name="signin_input_confirmpass">请重写您的密码</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="exit">注销</string>
    <string name="typetext">分类</string>
    <string name="saotext">扫啊扫</string>
</resources>