<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/grey_900"
        android:textSize="@dimen/text_size_14" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/grey_900"
        android:textSize="@dimen/text_size_14" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/grey_900"
        android:textSize="@dimen/text_size_14" />
</LinearLayout>